feat: add implementation for get user profile endpoint
